tests/negative/no_sanction_func.veldanava
Primordial_Regalia;

genesis func main():
    genesis myfunc();
;
